--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <div class="footer"
 >
-<img src="C:\Users\ACER\Downloads\blog-preview-card-main (1)\blog-preview-card-main\assets\images\image-avatar.webp" alt="">
+<img src="./assets/images/image-avatar.webp" alt="">
 <span>Greg Hooper</span></div>
 
 
